# Remiball

./: .env.dev  README.md  bot.py  plugins.json  pyproject.toml  test1.pyproj
awesome_bot/plugins/24dian/: __init__.py
awesome_bot/plugins/_gb/: __init__.py  gb_card.py  gb_cardpool.py  gb_cardsets.py  gb_coin.py  gb_config.py  gb_control.py  gb_database.py  gb_luck.py  gb_permission.py  gb_rule.py
awesome_bot/plugins/bilibili/: __init__.py  datasource.py
awesome_bot/plugins/coin/: __init__.py
awesome_bot/plugins/control/: __init__.py
awesome_bot/plugins/draw_card/: __init__.py
awesome_bot/plugins/draw_card/cardset/: __init__.py
awesome_bot/plugins/draw_card/pool/: __init__.py
awesome_bot/plugins/draw_card/shop/: __init__.py
awesome_bot/plugins/draw_card/task/: __init__.py
awesome_bot/plugins/draw_card/user/: __init__.py
awesome_bot/plugins/echo/: __init__.py
awesome_bot/plugins/game/: __init__.py
awesome_bot/plugins/game/g21/: __init__.py
awesome_bot/plugins/game/guess_number/: __init__.py
awesome_bot/plugins/game/stone/: __init__.py
awesome_bot/plugins/goodnight/: __init__.py
awesome_bot/plugins/language/: __init__.py
awesome_bot/plugins/luck/: __init__.py
awesome_bot/plugins/music/: __init__.py
awesome_bot/plugins/poke/: __init__.py
awesome_bot/plugins/remind/: __init__.py
awesome_bot/plugins/rndimage/: __init__.py  datasource.py  hash.py
awesome_bot/plugins/roll/: __init__.py
awesome_bot/plugins/rollwife/: __init__.py
awesome_bot/plugins/select/: __init__.py
awesome_bot/plugins/strange/: __init__.py
(+1 files in other folders)
